IF (CELESTE_GPU OR CELESTE_GPUECP)
    ADD_SUBDIRECTORY(cuda)
ENDIF()

ADD_LIBRARY(CelesteCore Celeste.cpp CelesteObject.cpp COMMotion.cpp Config.cpp Constraint.cpp ConstraintShake.cpp DistRestraint.cpp DynamicsMode.cpp ElectrostaticObject.cpp Extend.cpp ForceField.cpp ForceFieldObject.cpp MiniCell.cpp MmSystem.cpp PBC.cpp PosRestraint.cpp Read.cpp RunMode.cpp SubBox.cpp Thermostat.cpp Write.cpp WriteTrr.cpp ZeroMultipoleSum.cpp)

IF (CELESTE_WO_NS)
    ADD_DEFINITIONS(-DF_WO_NS)
    ADD_EXECUTABLE(celeste_wons main.cpp)
    TARGET_LINK_LIBRARIES(celeste_wons CelesteCore)
ELSEIF (CELESTE_GPU)
    ADD_DEFINITIONS(-DF_CUDA)
    ADD_EXECUTABLE(celeste_gpu main.cpp)
    TARGET_LINK_LIBRARIES(celeste_gpu CelesteCUDA CelesteCore)
ELSEIF (CELESTE_GPUECP)
    ADD_DEFINITIONS(-DF_CUDA -DF_ECP)
    ADD_EXECUTABLE(celeste_gpuecp main.cpp)
    TARGET_LINK_LIBRARIES(celeste_gpuecp CelesteCUDA CelesteCore)
ELSE()
    ADD_EXECUTABLE(celeste main.cpp)
    TARGET_LINK_LIBRARIES(celeste CelesteCore)
    # IF (CELESTE_USE_MPI)
    #     TARGET_LINK_LIBRARIES( celeste ${MPI_LIBRARIES} )
    # ENDIF()
ENDIF()
